feat(backend): v1.0
