# backend/models/department.go
@@ -14,5 +14,5 @@ type Department struct {
 	CreatedAt          time.Time      `json:"created_at"`                  // 创建时间
 	UpdatedAt          time.Time      `json:"updated_at"`                  // 更新时间
 	DeletedAt          gorm.DeletedAt `gorm:"index" json:"-"`              // 软删除时间
-	ParentDepartment   *Department    `gorm:"foreignKey:ParentDepartmentID"`
+	ParentDepartment   *Department    `gorm:"foreignKey:ParentDepartmentID" json:"parent_department,omitempty"`
 }
